tests/NormalTests/paczka1/fuzzy1/73525539.err
Error in line 27: A710 S286 54,3
Error in line 30: Gmz9bW46bn A362 42,0
